--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 APP_PORT=8081
 CLIENT_ID=950e3839d0dc327e4654
 CLIENT_SECRET=a34b9bbbe7e8e868a5db680895610d0b575792ff
-REDIRECT_URI=http://localhost:4201/redirect
+REDIRECT_URI=http://localhost:4200
+SESSION_SECRET=mmohoyfytrytf
+MONGO_URI=mongodb+srv://goyalmohit4834:Qwerty123@cluster0.davoqj0.mongodb.net/?retryWrites=true&w=majority
