--- a/package.json
+++ b/package.json
@@ -3,22 +3,41 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-nodemon": "nodemon app.js"
   },
   "dependencies": {
-    "axios": "^1.3.3",
     "body-parser": "^1.20.1",
     "config": "^3.3.9",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
+    "faker": "^4.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "logger": "0.0.1",
+    "mapbox-gl": "^1.13.2",
+    "moment": "^2.29.3",
+    "mongoose": "^5.13.14",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-slug-updater": "^3.3.0",
     "morgan": "~1.9.1",
-    "path": "^0.12.7"
+    "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "session": "^0.1.0",
+    "slugify": "^1.6.5",
+    "stripe": "^8.219.0",
+    "styled-components": "^5.3.5"
   }
 }
